--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.9.2",
     "hammerjs": "^2.0.8",
+    "ngx-pagination": "^3.2.1",
     "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
